Update 2.Kế hoạch phát triển đội ngũ.md

--- a/2.Kế hoạch phát triển đội ngũ.md
+++ b/2.Kế hoạch phát triển đội ngũ.md
@@ -1,4 +1,8 @@
-## Kế hoạch năm 2025
+<img src="https://fox.ai.vn/wp-content/uploads/2024/07/Logo_Original-1.png" alt="Hình ảnh" width="50%" />
+
+## Công ty cổ phần công nghệ FoxAI
+
+## Kế hoạch nhân sự bộ phận Data Analyst năm 2025
 
 1. Kế hoạch tài chính năm 2025
 1.1. Doanh thu mục tiêu
