--- a/1.Chiến lược phát triển sản phẩm AI.md
+++ b/1.Chiến lược phát triển sản phẩm AI.md
@@ -9,9 +9,9 @@
 
 ## 1. Dịch vụ tư vấn triển khai gói sản phẩm & dịch vụ AI
 
-**Dịch vụ tư vấn AI:**
+**A.1.1. Dịch vụ khảo sát, tư vấn ứng dụng AI:**
 
-* Khảo sát, đánh giá nhu cầu và tiềm năng ứng dụng AI cho từng khách hàng của FoxAI.
+* [Khảo sát, đánh giá nhu cầu và tiềm năng ứng dụng AI cho từng khách hàng của FoxAI.](https://github.com/hoanglong8/FoxAI-Data-Analyst/blob/main/A.1.1.D%E1%BB%8Bch%20v%E1%BB%A5%20kh%E1%BA%A3o%20s%C3%A1t,%20t%C6%B0%20v%E1%BA%A5n%20AI.md)
 
 **Phát triển giải pháp AI tùy chỉnh:**
 
