Update 1.Chiến lược phát triển sản phẩm AI.md

--- a/1.Chiến lược phát triển sản phẩm AI.md
+++ b/1.Chiến lược phát triển sản phẩm AI.md
@@ -87,7 +87,7 @@
   - AI dự đoán nhu cầu để tối ưu hóa kho bãi và logistics.
 - Tối ưu hóa giá bán:
   - Sử dụng AI để điều chỉnh giá theo cung cầu và chiến lược cạnh tranh.
-- Chatbot hỗ trợ khách hàng:
+- **Chatbot hỗ trợ khách hàng:**
   - Chatbot AI 24/7 giải đáp câu hỏi và hỗ trợ mua sắm.
 
 ---
