Update 1.Chiến lược phát triển sản phẩm AI.md

--- a/1.Chiến lược phát triển sản phẩm AI.md
+++ b/1.Chiến lược phát triển sản phẩm AI.md
@@ -19,7 +19,7 @@
 
 **Tích hợp công cụ AI vào hệ thống sẵn có:**
 
-* Triển Khai hệ thống AI Tích Hợp Vào Phần Mềm Nội Bộ Hoặc Tự Động Hóa Quy Trình (Automatic Workflow)
+* [Triển Khai hệ thống AI Tích Hợp Vào Phần Mềm Nội Bộ Hoặc Tự Động Hóa Quy Trình (Automatic Workflow)](https://github.com/hoanglong8/FoxAI-Data-Analyst/blob/main/A.1.3.D%E1%BB%8Bch%20v%E1%BB%A5%3A%20Tri%E1%BB%83n%20khai%20AI%20t%C3%ADch%20h%E1%BB%A3p%20ho%E1%BA%B7c%20AI%20t%E1%BB%B1%20%C4%91%E1%BB%99ng.md)
 
 **Dịch vụ đào tạo và hỗ trợ:**
 
