Update and rename B.1.Kế hoạch tuyển dụng - Mô tả công việc.md to 1.Tuyển dụng - Mô tả công việc.md

--- a/Chiến lược NS/1.Tuyển dụng - Mô tả công việc.md
+++ b/Chiến lược NS/1.Tuyển dụng - Mô tả công việc.md
@@ -1,36 +1,34 @@
-# **Kế hoạch tuyển dụng năm 2025**
-
-## A.Quy trình tuyển dụng
+## 1.Quy trình tuyển dụng
 
 ```mermaid
 graph LR
 XĐ_yêu_cầu_công_việc --> Đăng_tin_tuyển_dụng --> Sàng_lọc_ứng_viên --> Phỏng_vấn --> Thử_việc
 ```
 
-### Xác định yêu cầu công việc:
+### Bước 1: Xác định yêu cầu công việc:
 * Xây dựng JD (Job Description) chi tiết cho từng vị trí.
 * Lên danh sách các kỹ năng và chứng chỉ bắt buộc.
 
-### Đăng tin trên các kênh tuyển dụng:
+### Bước 2: Đăng tin trên các kênh tuyển dụng:
 * LinkedIn, VietnamWorks, ITviec cho Tech Lead SAP và AI Engineer.
 * Facebook Group, CareerBuilder cho Data Analyst.
 
-### Sàng lọc ứng viên:
-* Tech Lead SAP: Kiến thức về SAP Fiori, HANA, tích hợp API.
+### Bước 3: Sàng lọc ứng viên:
+* Tech Lead SAP: Kiến thức về SAP B1 hoặc HANA, tích hợp API.
 * AI Engineer: Thành thạo Python, TensorFlow, tích hợp ChatGPT hoặc các AI model.
 * Data Analyst: Kinh nghiệm làm việc với SQL, Power BI, hoặc Tableau.
 
-### Phỏng vấn:
+### Bước 4: Phỏng vấn:
 * 1.Sàng lọc CV.
 * 2.Phỏng vấn chuyên môn (Test case thực tế).
 
-### Thử việc:
-* Đào_tạo_hội_nhập
+### Bước 5: Thử việc:
+* Đào tạo hội nhập
 * Training on job
 
 ---
 
-## B.Mô tả công việc cho 4 vị trí
+## 2.Mô tả công việc cho 4 vị trí
 
 ### **2.1. Vị trí: Tư vấn triển khai (AI Consultant)**
 - **Số lượng cần tuyển:** 4 người
@@ -84,39 +82,3 @@ XĐ_yêu_cầu_công_việc --> Đăng_tin_tuyển_dụng --> Sàng_lọc_ứng_
 - **Mức lương dự kiến:** ... triệu VNĐ/tháng.
 
 ---
-
-## **3. Quy trình phối hợp triển khai giữa 4 vị trí và bộ phận kinh doanh**
-
-```mermaid
-graph LR
-Kinh_doanh --> Tư_vấn_triển_khai --> Data_Analyst --> AI_Engineer --> Hỗ_trợ_bảo_trì
-```
-
----
-
-## **4. Các công việc cần thực hiện trong năm 2025**
-
-### **4.1. Bộ phận nhân sự**
-- Đăng tin tuyển dụng trên các kênh tuyển dụng uy tín.
-- Tổ chức phỏng vấn và đánh giá ứng viên theo từng vòng.
-- Onboarding và đào tạo cơ bản cho nhân viên mới (kỹ năng mềm và hiểu biết cơ bản về AI).
-
-### **4.2. Bộ phận kinh doanh và phát triển sản phẩm**
-- Thiết lập các quy trình phối hợp giữa bộ phận kinh doanh và các nhóm triển khai, đảm bảo thông tin không bị đứt gãy.
-- Tổ chức họp giao ban hàng tuần giữa các bộ phận để theo dõi tiến độ dự án.
-
-### **4.3. Hỗ trợ và quản lý khách hàng**
-- Xây dựng tài liệu hướng dẫn sử dụng cho khách hàng.
-- Triển khai khảo sát mức độ hài lòng của khách hàng định kỳ để cải thiện dịch vụ.
-
----
-
-## **5. Tổng kết ngân sách tuyển dụng năm 2025**
-
-| **Danh mục**            | **Chi phí dự kiến (VNĐ)** |
-|--------------------------|--------------------------|
-| Tuyển dụng & onboarding | 300 triệu               |
-| Đào tạo nhân sự nội bộ   | 200 triệu               |
-| **Tổng ngân sách**       | **500 triệu**           |
-
-FoxAI sẽ tập trung xây dựng đội ngũ nhân sự chất lượng cao và phối hợp chặt chẽ giữa các bộ phận để triển khai dịch vụ hiệu quả, đảm bảo đáp ứng nhu cầu khách hàng và đạt mục tiêu kinh doanh trong năm 2025.
